--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ pylint = "*"
 django = "*"
 django-imagekit = "*"
 pillow = "*"
+annoying = "*"
+django-annoying = "*"
 
 [requires]
 python_version = "3.7"
